[package]
name = "interrupt-callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12.0"
