[package]
name = "interrupt-callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12.0"
toml = "0.8.19"
