[package]
name = "interrupt-callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
env_logger = "0.11.5"
hmac = "0.12.1"
log = "0.4.22"
mockito = "1.5.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sysinfo = "0.31.4"
tempfile = "3.12.0"
toml = "0.8.19"
